# jik

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml  sync_uvicorn.yml
jik/: _version.py
src/jik-app/: README.md  pyproject.toml
src/jik-app/tests/: test_app.py
src/jik-server/: README.md  pyproject.toml
src/jik-server/tests/: test_package.py
src/uvicorn/tests/: conftest.py
