[tool.poetry]
name = "jik"
version = "0.0.0"
description = "Coming soon..."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jik_app", from = "src/jik-app" },
    { include = "jik_server", from = "src/jik-server" },
    { include = "uvicorn", from = "src/uvicorn" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
# Uvicorn related
click = "*"
httpx = "*"
websockets = "*"
wsproto = "*"
httptools = "*"
pyyaml = "*"
a2wsgi = "*"
pytest-mock = "*"
python-dotenv = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src/uvicorn/"]

[tool.poetry-dynamic-versioning]
enable = true
latest-tag = true
format-jinja = """
{%- if distance == 0 -%}
    {{ serialize_pep440(base, stage, revision) }}
{%- else -%}
    {{ serialize_pep440(bump_version(base), stage="a", revision=distance) }}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
