[tool.poetry]
name = "jik-server"
version = "0.0.0"
description = "Coming soon..."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvloop = ">=0.19.0"

[tool.poetry-dynamic-versioning]
enable = true
latest-tag = true
format-jinja = """
{%- if distance == 0 -%}
    {{ serialize_pep440(base, stage, revision) }}
{%- else -%}
    {{ serialize_pep440(bump_version(base), stage="a", revision=distance) }}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
